--- a/tutorial/bg_info/tutorial_julesrose/developer_advanced_quiz.html
+++ b/tutorial/bg_info/tutorial_julesrose/developer_advanced_quiz.html
@@ -204,7 +204,7 @@
                         </li>
 
                         <li>
-                            <p class="question">Where can you find out what the latest vnX.X_txxx number is for runnning the app updgrade macro?</p>
+                            <p class="question">Where can you find out what the latest vnX.X_txxx number is for running the app upgrade macro?</p>
                             <div id="7" class="questions">
                                 <ol type="A">
                                     <li><input type="radio" value="A" /><label for="A">rose-meta/jules-fcm-make/versions.py</label><br/></li>
@@ -285,7 +285,7 @@
                         </li>
 
                         <li>
-                            <p class="question">If you have UM access, how can you checkout the UM code at vn10.7?</p>
+                            <p class="question">If you have UM access, how can you checkout the UM code at vn#.#?</p>
                             <div id="13" class="questions">
                                 <ol type="A">
                                     <li><input type="radio" value="A" /><label for="A">fcm co fcm:um.x_tr@rvn#.#</label><br/></li>
@@ -350,7 +350,7 @@
                         </li>
 
                         <li>
-                            <p class="question">How do can you compile and check the documenation branch from within docs/user_guide?</p>
+                            <p class="question">How do can you compile and check the documentation branch from within docs/user_guide?</p>
                             <div id="18" class="questions">
                                 <ol type="A">
                                     <li><input type="radio" value="A" /><label for="A">make latexpdf; evince build/latex/JULES_Users_Guide.pdf</label><br/></li>
@@ -395,7 +395,7 @@
                 <div class="well">
                     <p id="submit-container"><button id="submitbutton">Check
                         Answers</button>
-                    </p>
+                   </p>
                 </div>
             </div>
             <div class="container">
