--- a/tutorial/bg_info/tutorial_julesrose/jr_developer.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_developer.html
@@ -317,7 +317,7 @@ fcm st
            <p>Now to make a change that we want to keep and test:</p>
            <pre>
 cd ~jules/vn4.8_tutorial_bc_rosestem/
-# move to the sourse directory of the JULES code
+# move to the source/root directory of the JULES code
 cd src/snow
 # edit tridag.F90 ln 68 to be this:
   gamm(n) = c(n-1) / beta_2
@@ -1534,10 +1534,14 @@ END MODULE n_leach_mod
             <img src="images/new_ticket.png" width="80%" id="red2"/>
             <br/>
             <h4>Filling in the empty ticket</h4>
-            <p>Complete the <code>Summary</code> section, Chose the appropriate
+            <p>Complete the <code>Summary</code> section. Chose the appropriate
             <code>Type</code> and only change the <code>Milestone</code> to the
             upcoming JULES code release if you think that you will complete it
-            in time.</p>
+            in time. <code>Owner</code> must be provided and is usually the 
+            person that has opened the ticket. If someone is to be assigned
+            please get their permission first. The <code>Priority</code>
+            should be provided. Only the <code>CC</code> and <code>Keywords</code>
+            are allowed to be left empty.</p>
             <p>The <code>Description</code> should be a clear and concise
                explanation of the problem and the proposed solution.
                There also needs to be a link to the branch and the Ticket
@@ -1575,7 +1579,7 @@ You could also create the same page higher in the hierarchy:
                <code>Edit this page</code>.
                Fill in all of the sections that you can at the time.</p>
             <br/>
-            <h4>Adding the <code>trac.log</code></h4>
+            <h4>Adding the <code>trac.log</code>'s</h4>
             <p>After you have made your code change and are happy with it you
                have to run the JULES rose stem tests for your branch.</p>
             <p>More detail on rose stem have been discussed earlier in these
@@ -1583,6 +1587,10 @@ You could also create the same page higher in the hierarchy:
             <p>Once rose stem has completed then the <code>trac.log</code> can
                be copied to the Ticket Summary.</p>
            <p>The location of the trac.log: <code>~/cylc-run/&lt;BRANCH_NAME&gt;/trac.log</code>.</p>
+            <p>Note that UM-JULES rose stem tests must be run with the group 
+            <code>--group=jules,developer</code> if your site does not have this
+               capability please email Jules-Support@metoffice.gov.uk to request
+               assistance.</p>
             <br/>
             <h4>The review process</h4>
             <p>You must have code owner approval for your change before it is 
@@ -2027,7 +2035,7 @@ class vn47_txxx(rose.upgrade.MacroUpgrade):
             <p>Accompanying this <code>rose-meta/jules-standalone/versions.py</code>
               change is also a <code>rose-meta/jules-standalone/HEAD/rose-meta.conf</code>
               file change.</p>
-            <p>For example, with the above change some sort-key valuse were
+            <p>For example, with the above change some sort-key values were
                updated and a new section added:</p>
 <pre>
 [namelist:jules_snow=graupel_options]
