--- a/tutorial/bg_info/tutorial_julesrose/jr_user.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_user.html
@@ -123,7 +123,7 @@
       , post-quiz section - background, basic principles and some best working
        practices, introducing FCM, Rose, Cylc, rose-stem etc.</li>
       <li><a href="users_quiz.html">Users Quiz</a> testing your 
-      leanring from the Users course.</li>
+      learning from the Users course.</li>
       <li><a href="jr_developer.html">Developer tutorial and practical's</a>
       - this section is intended to provide the developer users information
       on using JULES-Rose.</li>
@@ -133,7 +133,7 @@
       this section is intended for developer advanced uses of JULES-Rose and covers
       higher level development of code and suites.</li>
       <li><a href="developer_advanced_quiz.html">Developer Advanced Quiz</a> testing your 
-      learnign from the developer advanced quiz.</li>
+      learning from the developer advanced quiz.</li>
       </ul>
       The design of the tutorial does mean that the user can just access the
       parts of the tutorial that they wish.
@@ -829,7 +829,7 @@ fcm co https://code.metoffice.gov.uk/svn/jules/main/trunk@vn4.8
            <br/><img src="images/u_ai828_demo_3.png" width="60%" id="cgd3"/>
            <br/><img src="images/stop_suite_daemon.png" width="35%" id="ssd"/>
            <br/>Note in the last image in the top taskbar it says:
-           <code>Stop Suite Daemon vn4p7</code> this means that this panel 
+           <code>Stop Suite Daemon vn4p8</code> this means that this panel 
            can be used to stop the suite at the location it is running using 
            the suite daemon.
            Which is the computer program that runs as a background process.</li>
