--- a/tutorial/bg_info/tutorial_julesrose/jr_vm_setup.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_vm_setup.html
@@ -139,7 +139,7 @@ vagrant up
 #when run for the first time since installing this takes about 10-20 minutes depending on your internet connection speed.
 #when it has completed the install it will shut itself down
 
-#Start the VM after the the first ever time
+#Start the VM after the first ever time
 vagrant up
 #this takes about 2-5 mins
 #you will be asked for your MOSRS password
