Update to the index for all JULES-Rose tutorials.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
             <h2>Tutorials</h2>
             <ul>
                 <li><a href="tutorial/bg_info/tutorial/fcm_fundamentals.html">Background tutorial</a></li>
-                <li><a href="tutorial/bg_info/tutorial_julesrose/index.html">JULES-Rose tutorial index</a></li>
-                <li><a href="tutorial/bg_info/tutorial_julesrose/jr_beginner.html">JULES-Rose tutorial Beginner</a></li>
+                <li><a href="tutorial/bg_info/tutorial_julesrose/index.html">JULES-Rose tutorial: Index</a></li>
+                <li><a href="tutorial/bg_info/tutorial_julesrose/jr_user.html">JULES-Rose tutorial: User</a></li>
+                <li><a href="tutorial/bg_info/tutorial_julesrose/jr_developer.html">JULES-Rose tutorial: Developer</a></li>
+                <li><a href="tutorial/bg_info/tutorial_julesrose/jr_developer_advanced.html">JULES-Rose tutorial: Developer Advanced</a></li>
             </ul>
         </div>
     </body>
