--- a/tutorial/bg_info/tutorial_julesrose/jr_user.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_user.html
@@ -202,7 +202,7 @@ resent there are 17 contributors, 11 of which are not Met Office UK.
                 The <a href="http://metomi.github.io/rose/doc/rose.html">Rose documentation</a> can be useful for background reading and a more detailed explanation for how the infrastructure works.
             </div>
             <div class="page-header">
-                <h2>Why used Rose/Cylc?</h2>
+                <h2>Why use Rose/Cylc?</h2>
             </div>
             <div class="well">
                 Rose/Cylc provides a user friendly interface for JULES suites and allows them to be scheduled in the most efficient way using Cylc's clever algorithm (code).
