The rest of the changes from the TM review.

--- a/tutorial/bg_info/tutorial_julesrose/jr_developer.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_developer.html
@@ -388,7 +388,7 @@ Succeed - fcm_make_meto_xc40_cce_debug
         <p>
         <ul>
             <div class="page-header">
-                <h3>Why are their coding standards and reviewing?</h3>
+                <h3>Why are there coding standards and reviewing?</h3>
             </div>
             <div class="well">
                <p>Coding standards provide quality assurance and help provide a consistent interface for development.</p>
