--- a/tutorial/bg_info/tutorial_julesrose/jr_developer_advanced.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_developer_advanced.html
@@ -628,7 +628,7 @@ evince build/latex/JULES_User_Guide.pdf
             self.add_setting(config, ["namelist:jules_soil_biogeochem_mod", "soil_bgc_model"], "2")
 </pre>
 </li>
-                     <li>Complier fcm_make warnings, please check the <code>fcm-make.log</code>.</li>
+                     <li>Compiler fcm_make warnings, please check the <code>fcm-make.log</code>.</li>
                      <li>New science means a new rose-stem test to safe guard the new science.</li>
                      <li>Never use tabs, and please do not add trailing 
                          whitespaces, they can both cause problems with the code.</li>
