--- a/tutorial/bg_info/tutorial_julesrose/jr_user.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_user.html
@@ -378,7 +378,8 @@ resent there are 17 contributors, 11 of which are not Met Office UK.
             <div class="well">
                 This is a testing system that checks to make sure that any code changes do not break any existing science that has a test.
                 More tests are being added to provide robustness to the system.
-                Rose stem is part of the JULES code and can be run by anyone that has a copy of the code.
+                Rose stem is part of the JULES code and can be run by anyone that has a copy of the code and is running on the Virtual Machine (VM), JASMIN, MONSooN or any other supported site.
+                <p>A supported site is one that has a site specific configuration as part of the code repository.</p>
             </div>
         </ul>
         <br/>
@@ -1604,6 +1605,11 @@ About 15 seconds
                    back to the atmosphere.
                   </p>
                   <p>The paper by <a href="http://onlinelibrary.wiley.com/doi/10.1029/WR020i006p00682/pdf">Cosby et. al. (1984)</a> defines a range of distinct soil types.
+                   </p>
+                   <p>Please note these are not considered by all as the optimum setting but are only for example purposes here.
+                    Cosby's parameter values were valid for the USA only: for runs at other locations please consult other sources e.g. the <a href="http://www.fao.org/soils-portal/soil-survey/soil-maps-and-databases/harmonized-world-soil-database-v12/en/">HWSD</a>.
+                   </p>
+                   <p>
                    The relevant parameters for a few soil types are:</p>  
 <pre>
 Sand
@@ -2325,7 +2331,12 @@ soil_moisture_availability_factor_tseries.png
                 </div>
             </div>
             <br/>
-
+             <div>
+                 <p>Note ancillary files are not covered in the tutorials.
+                    A new ANcillary Tools and Suites system, ANTS, is being developed at present by the UK Met Office, please see the information on <a href="https:/code.metoffice.gov.uk/trac/ancil/#ANcillaryToolsandSuitesANTS">ANTS</a>.</p>
+             </div>
+             <br/>
+             <div>
             <h3>Congratulations you have completed the Users Tutorial!</h3>
 
             </div>
